--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,50 @@
-*   {
-    font-family: Poppins, Arial, sans-serif;
-    background-color: #DFD9E2;
-    color: #535865;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
+
+body {
+    font-family: 'Poppins', Arial, sans-serif;
+    font-weight: 300;
+    color: hsl(223, 10%, 36%);
+    background-color: hsl(280, 13%, 87%);
+}
+
+h1  {
+    text-decoration: underline;
 }
 
 h1, h2, h3    {
-    color: #865B9A;
+    color: hsl(281, 26%, 48%);
 }
 
-#introduction   {
+h1, h2, h3 {
     font-weight: 500;
-    color: #535865;
+    color: hsl(281, 26%, 48%);
 }
 
-#space  {
+h1, h2 {
+    text-align: center;
+}
+
+h2 {
+    text-transform: uppercase;
     letter-spacing: 10px;
-    text-align: center;
-    font-weight: normal;
 }
 
-.intro  {
-    text-align: center;
-    text-decoration: underline;
-    font-weight: normal;
-}
-
-p   {
-    font-weight: 300;
+#introduction {
+    font-weight: 500;
 }
 
 .vita   {
-    font-weight: 300;
     list-style-type: square;
 }
 
 .button  {
-    color: white;
-    background-color: #865B9A;
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(281, 26%, 48%);
     transition-duration: 0.4s;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .button:hover    {
     color: white;
-    background-color: #4CAF50;
+    background-color: hsl(122, 39%, 49%);
 }
